--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
+  name        : "XuYan Author"
+  uri         : "http://xuyan1001.github.io"
+  email       : "xuyan.amazing@gmail.com"
   bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : "Twitter Name"
+  google_plus : "Google Plus Name"
 
 Name2 Name2:
   name        : "Name2 Name2"
