--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xu Yan"
-  avatar           : "profile.png"
+  avatar           : "avatar.jpg"
   bio              : "I am a fresh fish! \n Stay Foolish Stay Hungry! \n Keep Clam and Carry On!"
   location         : "北京市健康智谷--医渡云"
   employer         :
