--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,11 @@
 # main links links
 main:
+  - title: "Blog Posts"
+    url: /year-archive/
+  
+  - title: "By Tags"
+    url: /tags/
+
   - title: "Publications"
     url: /publications/
 
@@ -11,10 +17,7 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+          
   - title: "CV"
     url: /cv/
     
