--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "cn-ZH"
-title                    : "许焱 / Growing"
+title                    : "许焱 / 进化"
 title_separator          : "-"
 name                     : &name "许焱"
 description              : &description "A Fresh Fish"
