--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,8 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
+remote_theme: "mmistakes/minimal-mistakes@4.16.0"
+
 # SEO Related
 google_site_verification :
 bing_site_verification   :
