--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,9 @@ staticman:
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
-remote_theme: "mmistakes/minimal-mistakes@4.16.0"
-
+timezone: "Asia/Shanghai"
+# remote_theme: "mmistakes/minimal-mistakes@4.16.0"
+paginate: 3
 # SEO Related
 google_site_verification :
 bing_site_verification   :
@@ -177,6 +178,9 @@ kramdown:
 
 # Collections
 collections:
+  reading_notes:
+    output: true
+    permalink: /:collection/:path/
   teaching:
     output: true
     permalink: /:collection/:path/
@@ -204,7 +208,15 @@ defaults:
       comments: true
       share: true
       related: true
+      author: "Yan Xu"
   # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+  # _reading_notes
   - scope:
       path: ""
       type: pages
@@ -254,7 +266,7 @@ sass:
 
 
 # Outputting
-permalink: /:categories/:title/
+permalink: pretty 
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
 timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
