--- a/_config.yml
+++ b/_config.yml
@@ -178,7 +178,7 @@ kramdown:
 
 # Collections
 collections:
-  reading_notes:
+  reading-notes:
     output: true
     permalink: /:collection/:path/
   teaching:
@@ -219,10 +219,11 @@ defaults:
   # _reading_notes
   - scope:
       path: ""
-      type: pages
+      type: reading-notes
     values:
       layout: single
       author_profile: true
+      author: "Yan Xu"
   # _teaching
   - scope:
       path: ""
